
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-search"
version = "0.2.0"
description = "Opinionated wrapper around searchpubmed for observational RWD literature retrieval"
authors = [
    {name = "ChatGPT refactor bot", email = "noreply@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "searchpubmed>=0.1.0",
    "pandas>=1.5",
    "requests",
    "beautifulsoup4",
    "click>=8",
    "xlsxwriter; extra == 'excel'",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
excel = ["xlsxwriter", "openpyxl"]

[project.scripts]
pubmed-search = "pubmed_search.cli:cli"
