
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed-search"
version = "0.4.0"
description = "Lightweight, opinionated wrapper around searchpubmed – refactored"
authors = [
    {name = "ChatGPT Refactor Bot", email = "bot@example.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "searchpubmed>=0.3.4",
    "pandas>=1.5",
    "click>=8",
	"ohdsi_utils",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
pubmed-search = "pubmed_search.cli:cli"
